[gd_scene load_steps=5 format=3 uid="uid://diadkloq426ja"]

[ext_resource type="Script" path="res://assets/scripts/main_menu/main_menu.gd" id="1_c340b"]
[ext_resource type="Texture2D" uid="uid://dghsxo6q67sse" path="res://assets/sprites/ui/github_logo.png" id="2_gc622"]
[ext_resource type="AudioStream" uid="uid://bnu22ca4lnfh6" path="res://assets/audio/menu.wav" id="3_ee1o0"]
[ext_resource type="AudioStream" uid="uid://casbgbgdvboa4" path="res://assets/audio/button.wav" id="4_ey6td"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c340b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="GitHubButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -144.0
offset_right = -44.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_gc622")
ignore_texture_size = true
stretch_mode = 0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ee1o0")
volume_db = -8.813
autoplay = true
bus = &"Music"

[node name="ButtonsPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ey6td")
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GitHubButton" to="." method="_on_github_button_pressed"]
